# session_proto

./: CMakeLists.txt  README.md  arrow.proto  boundingbox.proto  brep.proto  bvh.proto  color.proto  cylinder.proto  edge.proto  element.proto  elementfeature.proto  encoders.proto  feature.proto  graph.proto  line.proto  matrix.proto  mesh.proto  nurbscurve.proto  nurbssurface.proto  nurbssurface_trimmed.proto  objects.proto  plane.proto  point.proto  pointcloud.proto  polyline.proto  quaternion.proto  session.proto  tolerance.proto  tree.proto  treenode.proto  trimmedsurface.proto  vector.proto  vertex.proto  xform.proto
.github/workflows/: buf.yml  build-release.yml
cpp_build_examples/: CMakeLists.txt  CMakeLists_Main.txt
